--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiyong Park"
-  avatar           : "image/profile/DL.jpg"
+  avatar           : "assets/image/profile/character.jpg"
   bio              : "**공부 일기장**<br>매일 공부합시다."
   location         : "Seoul, Republic of Korea"
   email            : "jiyongpark62@gmail.com"
