instagram address edited

--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ author:
       url: "https://github.com/bjybs123/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/jiyong_nyam"
+      url: "https://instagram.com/jp.name"
 
 # Site Footer
 footer:
